--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -1,21 +1,4 @@
 {
-    "Projects": {
-        "295": {
-            "files": {
-                "Maro": null,
-                "Indexes": null
-            }
-        },
-        "206": {
-            "files": {
-                "Indexes": null,
-                "Internal": null
-            }
-        }
-    },
-    "Paths": {
-        "Save": "C:/Users/Wana/Downloads/VM",
-        "Load": "C:/Users/Wana/Desktop/WROBI",
-        "Errors": "C:/Users/Wana/Downloads/VM E"
-    }
+    "name": "John",
+    "age": 30
 }
