Update JSON file

--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -11,6 +11,9 @@
                 "Indexes": null,
                 "Internal": null
             }
+        },
+        "fery": {
+            "files": {}
         }
     },
     "Paths": {
