Update JSON file

--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -13,7 +13,9 @@
             }
         },
         "fery": {
-            "files": {}
+            "files": {
+                "Maro": null
+            }
         }
     },
     "Paths": {
