Update JSON file

--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -14,7 +14,8 @@
         },
         "fery": {
             "files": {
-                "Maro": null
+                "Maro": null,
+                "Indexes": null
             }
         }
     },
