Update JSON file

--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -5,6 +5,12 @@
                 "Maro": null,
                 "Indexes": null
             }
+        },
+        "asdsa": {
+            "files": {
+                "Maro": null,
+                "Indexes": null
+            }
         }
     },
     "Paths": {
