Update JSON file

--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -11,6 +11,12 @@
                 "Maro": null,
                 "Indexes": null
             }
+        },
+        "321321": {
+            "files": {
+                "Maro": null,
+                "Indexes": null
+            }
         }
     },
     "Paths": {
