--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -6,7 +6,7 @@
                 "Indexes": null
             }
         },
-        "asdsa": {
+        "1234": {
             "files": {
                 "Maro": null,
                 "Indexes": null
@@ -16,6 +16,6 @@
     "Paths": {
         "Save": "C:/Users/Wana/Downloads/VM",
         "Load": "C:/Users/Wana/Desktop/WROBI",
-        "Errors": "C:/Users/Wana/Downloads/VM E"
+        "Errors": "C:/Users/Wana/Downloads"
     }
 }
