--- a/WROPISettings.json
+++ b/WROPISettings.json
@@ -47,4 +47,8 @@
             }
         ]
     }
+    "Paths": {
+        "Save": "C:/Users/Wana/Downloads/VM",
+        "Load": "C:/Users/Wana/Desktop/WROBI"
+    }
 }
