--- a/WROPISettings.json
+++ b/WROPISettings.json
@@ -48,7 +48,7 @@
         ]
     },
     "Paths": {
-        "Save": "C:/Users/Wana/Downloads/VM",
-        "Load": "C:/Users/Wana/Desktop/WROBI"
+        "Save": "C:/Users/Wana/Desktop",
+        "Load": "F:/Resources/PITESTI/Master_files"
     }
 }
