Update JSON file

--- a/WROBESettings.json
+++ b/WROBESettings.json
@@ -3,6 +3,6 @@
         "Combinatii": "C:/Users/Wana/Desktop/WROBE/10.Combinatii_module interne V295_AEJ24_2 SOP+AEJ25_1 PRO2_KW06_13.01.2024.xlsx",
         "Optimizare": "C:/Users/Wana/Desktop/WROBE/00.Optimizare si Autokan _KW07_V295 _ concept nou .xlsx",
         "Locatii": "C:/Users/Wana/Desktop/WROBE/01.Locatii fire pentru module S206-V295 Beius 2.xlsx",
-        "Comenzi": "C:/Users/Wana/Desktop/Components test file.xlsx"
+        "Comenzi": "C:/Users/Wana/Desktop/WROBE/06.Coverage  - 10.02 .xlsm"
     }
 }
