--- a/WROBESettings.json
+++ b/WROBESettings.json
@@ -1,8 +1,8 @@
 {
     "Paths": {
-        "Combinatii": "C:/Users/Wana/Desktop/WROBE/10.Combinatii_module interne V295_AEJ24_2 SOP+AEJ25_1 PRO2_KW06_13.01.2024.xlsx",
-        "Optimizare": "C:/Users/Wana/Desktop/WROBE/00.Optimizare si Autokan _KW07_V295 _ concept nou .xlsx",
-        "Locatii": "C:/Users/Wana/Desktop/WROBE/01.Locatii fire pentru module S206-V295 Beius 2.xlsx",
-        "Comenzi": "C:/Users/Wana/Desktop/WROBE/06.Coverage  - 10.02 .xlsm"
+        "Combinatii": "C:/Users/egfr1001/Desktop/Fire MB/10.Combinatii_module interne V295_AEJ24_2 SOP+AEJ25_1 PRO2_KW06_13.01.2024.xlsx",
+        "Optimizare": "C:/Users/egfr1001/Desktop/Fire MB/00.Optimizare si Autokan _KW07_V295 _ concept nou .xlsx",
+        "Locatii": "C:/Users/egfr1001/Desktop/Fire MB/01.Locatii fire pentru module S206-V295 Beius 2.xlsx",
+        "Comenzi": "C:/Users/egfr1001/Desktop/Fire MB/06.Coverage  - 10.02 .xlsm"
     }
 }
