Update JSON file

--- a/WROBESettings.json
+++ b/WROBESettings.json
@@ -1,8 +1,8 @@
 {
     "Paths": {
-        "Combinatii": "C:/Users/Wana/Desktop/WROBE/10.Combinatii_module interne V295_AEJ24_2 SOP+AEJ25_1 PRO2_KW06_13.01.2024.xlsx",
-        "Optimizare": "C:/Users/Wana/Desktop/WROBE/00.Optimizare si Autokan _KW07_V295 _ concept nou .xlsx",
-        "Locatii": "C:/Users/Wana/Desktop/WROBE/01.Locatii fire pentru module S206-V295 Beius 2.xlsx",
-        "Comenzi": "C:/Users/Wana/Desktop/WROBE/coverage wk. 7.xlsx"
+        "Combinatii": "G:/Operations/Operations Wo/04.Beius/01.Production/02.MAN/Fire MB/10.Combinatii_module interne V295_AEJ24_2 SOP+AEJ25_1 PRO2_KW06_13.01.2024.xlsx",
+        "Optimizare": "G:/Operations/Operations Wo/04.Beius/01.Production/02.MAN/Fire MB/00.Optimizare si Autokan _KW07_V295 _ concept nou .xlsx",
+        "Locatii": "G:/Operations/Operations Wo/04.Beius/01.Production/02.MAN/Fire MB/01.Locatii fire pentru module S206-V295 Beius 2.xlsx",
+        "Comenzi": "G:/Operations/Operations Wo/04.Beius/01.Production/02.MAN/01. Coverage by PN/Mercedes/coverage wk. 7.xlsx"
     }
 }
