Update JSON file

--- a/WROPISettings.json
+++ b/WROPISettings.json
@@ -48,7 +48,7 @@
         ]
     },
     "Paths": {
-        "Save": "C:/Users/Wana/Desktop",
+        "Save": "C:/Users/Wana/Desktop/WROPI Output",
         "Load": "F:/Resources/PITESTI/Master_files"
     }
 }
