Update JSON file

--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -3,7 +3,8 @@
         "295": {
             "files": {
                 "Maro": null,
-                "Indexes": null
+                "Indexes": null,
+                "Materiale": null
             }
         }
     },
