Update JSON file

--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -9,8 +9,8 @@
         }
     },
     "Paths": {
-        "Save": "C:/Users/egfr1001/Desktop/Digitalizare/WWW",
-        "Load": "C:/Users/egfr1001/Desktop/Digitalizare/Fisiere ajutatoare/WROBI",
-        "Errors": "C:/Users/egfr1001/Desktop/Digitalizare"
+        "Save": "C:/Users/Wana/Desktop/BI out",
+        "Load": "C:/Users/Wana/Desktop/WROBI",
+        "Errors": "C:/Users/Wana/Desktop/BI out"
     }
 }
