Update JSON file

--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -9,8 +9,8 @@
         }
     },
     "Paths": {
-        "Save": "C:/Users/Wana/Desktop/BI out",
-        "Load": "C:/Users/Wana/Desktop/WROBI",
-        "Errors": "C:/Users/Wana/Desktop/BI out"
+        "Save": "C:/Users/egfr1001/Desktop/Master Data Bistrita MB/OUTPUT",
+        "Load": "C:/Users/egfr1001/Desktop/Master Data Bistrita MB/v295",
+        "Errors": "C:/Users/egfr1001/Desktop/Master Data Bistrita MB/OUTPUT"
     }
 }
