Update JSON file

--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -6,6 +6,12 @@
                 "Indexes": null,
                 "Materiale": null
             }
+        },
+        "206": {
+            "files": {
+                "Indexes": null,
+                "Materiale": null
+            }
         }
     },
     "Paths": {
