--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -16,7 +16,7 @@
     },
     "Paths": {
         "Save": "C:/Users/Wana/Desktop/BI out",
-        "Load": "C:/Users/Wana/Desktop/WROBI",
+        "Load": "C:/Users/Wana/Desktop/BI",
         "Errors": "C:/Users/Wana/Desktop/BI out"
     }
 }
