--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -5,11 +5,18 @@
                 "Indexes": null,
                 "Materiale": null
             }
+        },
+        "295": {
+            "files": {
+                "Maro": null,
+                "Indexes": null,
+                "Materiale": null
+            }
         }
     },
     "Paths": {
-        "Save": "C:/Users/Wana/Desktop/BI out",
-        "Load": "C:/Users/Wana/Desktop/BI",
-        "Errors": "C:/Users/Wana/Desktop/BI out"
+        "Save": "C:/Users/egfr1001/Desktop/Projects/New folder",
+        "Load": "C:/Users/egfr1001/Desktop/Projects/WROBI/Master Data Bistrita MB",
+        "Errors": "C:/Users/egfr1001/Desktop/Projects/New folder"
     }
 }
