Update JSON file

--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -18,6 +18,6 @@
     "Paths": {
         "Save": "C:/Users/egfr1001/Desktop/Projects/New folder",
         "Load": "C:/Users/egfr1001/Desktop/Projects/WROBI/Master Data Bistrita MB",
-        "Errors": "C:/Users/egfr1001/Desktop/Projects/New folder"
+        "Errors": "C:/Users/Wana/Desktop/BI out"
     }
 }
