--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -6,18 +6,11 @@
                 "Indexes": null,
                 "Materiale": null
             }
-        },
-        "206": {
-            "files": {
-                "Maro": null,
-                "Indexes": null,
-                "Materiale": null
-            }
         }
     },
     "Paths": {
-        "Save": "C:/Users/egfr1001/Desktop/Projects/New folder",
-        "Load": "C:/Users/egfr1001/Desktop/Projects/WROBI/Master Data Bistrita MB",
+        "Save": "C:/Users/Wana/Desktop/BI out",
+        "Load": "C:/Users/Wana/Desktop/BI",
         "Errors": "C:/Users/Wana/Desktop/BI out"
     }
 }
