--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -11,6 +11,6 @@
     "Paths": {
         "Save": "C:/Users/Wana/Desktop/BI out",
         "Load": "C:/Users/Wana/Desktop/BI",
-        "Errors": "C:/Users/Wana/Desktop/BI out"
+        "Errors": "C:/Users/Wana/Desktop/BI out/Logs"
     }
 }
