--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -6,11 +6,18 @@
                 "Indexes": null,
                 "Materiale": null
             }
+        },
+        "206": {
+            "files": {
+                "Maro": null,
+                "Indexes": null,
+                "Materiale": null
+            }
         }
     },
     "Paths": {
         "Save": "C:/Users/Wana/Desktop/BI out",
-        "Load": "C:/Users/Wana/Desktop/BI",
+        "Load": "H:/Master Data Bistrita MB",
         "Errors": "C:/Users/Wana/Desktop/BI out/Logs"
     }
 }
