Update JSON file

--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -16,8 +16,8 @@
         }
     },
     "Paths": {
-        "Save": "C:/Users/Wana/Desktop/BI out",
-        "Load": "H:/Master Data Bistrita MB",
-        "Errors": "C:/Users/Wana/Desktop/BI out/Logs"
+        "Save": "C:/Users/egfr1001/Desktop/Projects/New folder",
+        "Load": "C:/Users/egfr1001/Desktop/Projects/WROBI/Master Data Bistrita MB",
+        "Errors": "C:/Users/egfr1001/Desktop/Projects/New folder/Logs"
     }
 }
