Update JSON file

--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -13,6 +13,11 @@
                 "Indexes": null,
                 "Materiale": null
             }
+        },
+        "1": {
+            "files": {
+                "Maro": "C:/Users/Wana/Desktop/BI/v295"
+            }
         }
     },
     "Paths": {
