--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -18,6 +18,7 @@
     "Paths": {
         "VM": null,
         "Save": "C:/Users/Wana/Desktop/BI out",
-        "Errors": "C:/Users/Wana/Desktop/BI out/Logs"
+        "Errors": "C:/Users/Wana/Desktop/BI out/Logs",
+        "WM": "C:/Users/Wana/Desktop/BI"
     }
 }
