Update JSON file

--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -16,7 +16,7 @@
         }
     },
     "Paths": {
-        "VM": "C:/Users/Wana/Desktop/BI",
+        "VM": "C:/Users/egfr1001/Desktop/Projects/WROBI/Master Data Bistrita MB",
         "Save": "C:/Users/egfr1001/Desktop/Projects/New folder",
         "Errors": "C:/Users/egfr1001/Desktop/Projects/New folder/Logs",
         "WM": "C:/Users/Wana/Desktop/BI"
