--- a/WROARSettings.json
+++ b/WROARSettings.json
@@ -3,6 +3,6 @@
         "Headcount": null,
         "Machines": null,
         "Targets": null,
-        "CAOFile": null,
+        "CAOFile": null
     }
 }
