--- a/WROARSettings.json
+++ b/WROARSettings.json
@@ -3,6 +3,6 @@
         "Headcount": "C:/Users/Wana/Desktop/CST/headcount cutting.xlsx",
         "Machines": "C:/Users/Wana/Desktop/CST/Masini CST.xlsx",
         "Targets": "C:/Users/Wana/Desktop/CST/Targets.xlsx",
-        "CAOFile": "C:/Users/Wana/Desktop/CST/File12.xlsx"
+        "CAOFile": "C:/Users/Wana/Desktop/CST"
     }
 }
