--- a/WROBISettings.json
+++ b/WROBISettings.json
@@ -2,16 +2,23 @@
     "Projects": {
         "206": {
             "files": {
-                "Maro": "H:/Master Data Bistrita MB/v206",
-                "Indexes": "H:/Master Data Bistrita MB/v206",
-                "Materiale": "H:/Master Data Bistrita MB/v206"
+                "Maro": "C:/Users/egfr1001/Desktop/Projects/WROBI/Master Data Bistrita MB/v206",
+                "Indexes": "C:/Users/egfr1001/Desktop/Projects/WROBI/Master Data Bistrita MB/v206",
+                "Materiale": "C:/Users/egfr1001/Desktop/Projects/WROBI/Master Data Bistrita MB/v206"
+            }
+        },
+        "295": {
+            "files": {
+                "Maro": "C:/Users/egfr1001/Desktop/Projects/WROBI/Master Data Bistrita MB/v295",
+                "Indexes": "C:/Users/egfr1001/Desktop/Projects/WROBI/Master Data Bistrita MB/v295",
+                "Materiale": "C:/Users/egfr1001/Desktop/Projects/WROBI/Master Data Bistrita MB/v295"
             }
         }
     },
     "Paths": {
         "VM": "C:/Users/egfr1001/Desktop/Projects/WROBI/Master Data Bistrita MB",
-        "Save": "H:/Master Data Bistrita MB/OUTPUT",
-        "Errors": "H:/Master Data Bistrita MB/OUTPUT/Logs",
+        "Save": "C:/Users/egfr1001/Desktop/Projects/WROBI/Master Data Bistrita MB/OUTPUT",
+        "Errors": "C:/Users/egfr1001/Desktop/Projects/WROBI/Master Data Bistrita MB/OUTPUT/Logs",
         "WM": "C:/Users/Wana/Desktop/BI"
     }
 }
