--- a/WROARSettings.json
+++ b/WROARSettings.json
@@ -3,6 +3,7 @@
         "Headcount": "//svro2file01/groups/Operations-WO/05.Lead Prep/05.01 Production/05.01.02 Cst/OEE/15. OEE weekly meeting/headcount cutting.xlsx",
         "Machines": "//svro2file01/groups/Operations-WO/05.Lead Prep/05.01 Production/05.01.02 Cst/OEE/15. OEE weekly meeting/Masini CST.xlsx",
         "Targets": "//svro2file01/groups/Operations-WO/05.Lead Prep/05.01 Production/05.01.02 Cst/OEE/15. OEE weekly meeting/Targets.xlsx",
-        "CAOFile": "C:/Users/egfr1001/Desktop/Projects/WROAR/CST OEE"
+        "CAOFile": "C:/Users/egfr1001/Desktop/Projects/WROAR/CST OEE",
+        "Output": Null
     }
 }
