--- a/WROARSettings.json
+++ b/WROARSettings.json
@@ -4,6 +4,6 @@
         "Machines": "C:/Users/Wana/Desktop/CST/Masini CST.xlsx",
         "Targets": "C:/Users/Wana/Desktop/CST/Targets.xlsx",
         "CAOFile": "C:/Users/Wana/Desktop/CST/source.csv",
-        "Output": "//svro2file01/groups/Operations-WO/05.Lead Prep/05.01 Production/05.01.02 Cst/OEE/15. OEE weekly meeting/Targets.xlsx"
+        "Output": "C:/Users/Wana/Desktop/CST/source.csv"
     }
 }
