Update JSON file

--- a/WROPISettings.json
+++ b/WROPISettings.json
@@ -76,8 +76,8 @@
         ]
     },
     "Paths": {
-        "Save": "C:/Users/Wana/Desktop/WROPI Output",
-        "Load": "F:/Resources/PITESTI/Master_files"
+        "Save": "C:/Users/egfr1001/Desktop/New folder",
+        "Load": "C:/Users/egfr1001/Desktop/Projects/WROPI/Eficienta Pitesti/Eff Pit/Master_files"
     },
     "RN": {
         "Assembly": [
